--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,5 @@ $global-primary-background: #491165;
 @import "~uikit/src/scss/variables-theme.scss";
 @import "~uikit/src/scss/mixins-theme.scss";
 @import "~uikit/src/scss/uikit-theme.scss";
+
+$global
